my-apps/media/plex/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: plex
  labels:
    volsync.backube/privileged-movers: "true"
