my-apps/media/plex/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  namespace: plex
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-cluster-issuer
spec:
  ingressClassName: cilium
  rules:
    - host: plex.vanillax.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  name: web
  tls:
    - secretName: plex-ingress-tls
      hosts:
        - plex.vanillax.me
